syntax = "proto3";
service UserService {
    // 用户注册
    rpc Signup(ReqSignup) returns (RespSignup) {}
}
message ReqSignup {
    string username = 1;
    string password = 2;
}

message RespSignup {
    int32 code = 1;
    string message = 2; //成功或失败
}